# stm32-devcontainer-template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
source/blink/: CMakeLists.txt
